# TabIntelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT1_TASK_BRIEF.md  AGENT3_DELIVERY_SUMMARY.md  AGENT_1A_COMPLETION_SUMMARY.md  AGENT_1D_COMPLETION_SUMMARY.md  AGENT_PROMPTS.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SETUP.md  Dockerfile  FINAL_STATUS.md  LICENSE  LINEAGE_IMPLEMENTATION_SUMMARY.md  LINEAGE_QUICKSTART.md  QUICK_WINS_COMPLETE.md  QUICK_WINS_SUMMARY.md  README.md  S3_IMPLEMENTATION_REPORT.md  SESSION_SUMMARY.md  add_validation_rules.py  alembic.ini  docker-compose.e2e.yml  docker-compose.yml  enhance_taxonomy_aliases.py  excel-model-intelligence.code-workspace  pyproject.toml  static_validation.py  validate_s3_implementation.py  verify_taxonomy.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_deliverable.md  bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_debtfund_schema.py  33d2ea36e3d6_merge_performance_indexes_and_.py  345956f5d313_add_entity_taxonomy_and_entitypattern_.py  39758e78eed4_add_benchmark_runs_and_benchmark_.py  8a3ff594b45a_add_line_items_table.py  96e5108af909_add_audit_logs_table.py  a1b2c3d4e5f6_add_content_hash_to_files.py  a1b2c3d4e5f7_add_cell_mapping_tracking.py  b2c3d4e5f6a7_add_correction_history_table.py  b7c8d9e0f1a2_add_validation_rules_to_taxonomy.py  c2dcf17a60da_add_entities_and_api_keys_tables.py  c3d4e5f6a7b8_reseed_taxonomy_v2_1_0_with_phase1_3.py  d3cdfafa1ded_change_taxonomy_aliases_from_array_to_.py  d5e8a9b12345_add_dlq_entries_table.py  e4f5a6b7c8d9_add_is_active_and_learned_aliases.py  f1a2b3c4d5e6_add_expires_at_to_api_keys.py  f9417a796465_seed_taxonomy_from_json.py  g1h2i3j4k5l6_add_quality_grade_and_needs_review.py  h2i3j4k5l6m7_add_extraction_facts_table.py  i3j4k5l6m7n8_fix_taxonomy_category_constraint.py  j4k5l6m7n8o9_add_taxonomy_versions_table.py  k5l6m7n8o9p0_backfill_period_normalized.py  l6m7n8o9p0q1_add_entity_metadata.py  m7n8o9p0q1r2_add_fact_normalization_metadata.py  n8o9p0q1r2s3_add_unmapped_label_aggregates.py  o9p0q1r2s3t4_add_performance_indexes.py  p0q1r2s3t4u5_add_entity_detail_columns.py  q1r2s3t4u5v6_add_fx_rate_cache_table.py  r2s3t4u5v6w7_add_quality_snapshots_table.py  s3t4u5v6w7x8_add_extraction_facts_columns.py  t4u5v6w7x8y9_add_taxonomy_tracking_to_extraction_jobs.py  u5v6w7x8y9z0_reseed_taxonomy_v3_1_0_hierarchy.py  v6w7x8y9z0a1_add_learned_alias_lifecycle_fields.py  w7x8y9z0a1b2_add_taxonomy_suggestions.py  x8y9z0a1b2c3_add_taxonomy_governance.py  y9z0a1b2c3d4_add_derived_facts_table.py  z0a1b2c3d4e5_add_snapshot_to_taxonomy_versions.py
data/: TAXONOMY.md  taxonomy.json  taxonomy.schema.json  taxonomy_seed.json
data/benchmark_baselines/: edge_cases.json  european_model.json  large_model.json  realistic_model.json  saas_startup.json  seed_burn.json
data/gold_standards/: edge_cases_gold.json  european_model_gold.json  large_model_gold.json  realistic_model_gold.json  saas_startup_gold.json  seed_burn_gold.json
data/real_extraction_results/: 01_result.json  02_result.json  03_result.json  04_result.json  05_result.json  06_result.json  07_result.json  08_result.json  09_result.json  10_result.json  summary.json
docs/: AGENT_1B_COMPLETION_SUMMARY.md  AGENT_PROMPTS.md  API.md  DEVELOPER_GUIDE.md  ENTITY_PATTERNS_INTEGRATION.md  EXCEL_UX_RESEARCH.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_RETROSPECTIVE.md  PHASE2_REVIEW.md  TAXONOMY_ROADMAP_TO_EXCELLENCE.md  TESTING.md  V3_UPDATE_SUMMARY.md  WEEK2_ALIGNMENT_SUMMARY.md  WEEK2_PROGRESS.md  WEEK4_PATTERN_IMPLEMENTATION_PLAN.md  WORLDCLASS_SUMMARY.md  test-structure.txt  week1-agent1a-verification.md
monitoring/: alerts.yml  prometheus.yml
prompts/: AUDIT_AGENT.md  extraction_audit.md
scripts/: README.md  benchmark_extraction.py  create_edge_cases.py  create_european_model.py  create_gold_standard.py  create_large_model.py  create_messy_fixture.py  create_realistic_model.py  create_saas_startup.py  create_seed_burn.py  create_test_model.py  db_reset.sh  db_seed.py  e2e.sh  enhance_taxonomy_phase1.py  enhance_taxonomy_phase2.py  enhance_taxonomy_phase3.py  enhance_taxonomy_unified.py  import_real_results.py  init_db.py  init_e2e_db.py  poc_guided_extraction.py  regression_tracker.py  run_real_extractions.py  safe_migrate.py  start_worker.sh  validate_taxonomy.py  verify_week1.sh
src/: __init__.py  taxonomy_constants.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_openapi_metadata.py  test_security_headers.py  test_storage.py.skip
(+293 files in other folders)
