[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabintelligence"
version = "0.1.0"
description = "Guided Hybrid Extraction Platform for Excel Financial Models"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "anthropic>=0.7.0",
    "openpyxl>=3.1.0",
    "boto3>=1.29.0",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.19.0",
    "slowapi>=0.1.9",
    "rapidfuzz>=3.0.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
tracing = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-celery>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-exporter-jaeger>=1.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E741",  # ambiguous variable name 'l' — clear in list comprehensions
    "E712",  # == True comparisons — required by SQLAlchemy filter expressions
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # late imports after module-level mocks
"tests/unit/test_benchmark.py" = ["E402"]
"tests/unit/test_regression_tracker.py" = ["E402"]
"src/db/crud.py" = ["E402"]  # late conditional imports
"tests/**" = ["N802", "N806"]  # test functions/mock classes may use uppercase
"scripts/**" = ["E501"]  # scripts have long string literals

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--ignore=tests/e2e",
]
markers = [
    "slow: marks tests as slow (>2s, deselect with -m 'not slow')",
    "integration: marks integration tests requiring external services",
    "realdata: marks tests that require real Excel files in tests/real data/",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true

[tool.coverage.run]
omit = []

[tool.coverage.report]
fail_under = 80
